kubernetes/cluster_roles/network-policies/general/deny-all.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny-all
  annotations:
    argocd.argoproj.io/sync-wave: "0" 
spec: 
  order: 100
  namespaceSelector: has(projectcalico.org/name) && projectcalico.org/name not in {"kube-system", "calico-system", "calico-apiserver"}
  types: 
    - Ingress
    - Egress
  egress:
    - action: Allow
      protocol: UDP
      destination:
        selector: k8s-app == "kube-dns"
        namespaceSelector: projectcalico.org/name == "kube-system"
        ports: [53]
    - action: Allow
      protocol: TCP
      destination:  
        selector: k8s-app == "kube-dns"
        namespaceSelector: projectcalico.org/name == "kube-system"
        ports: [53]
    - action: Allow
      protocol: TCP
      destination:
        services: # service match only works with kubernetes datastore driver not etcd
          namespace: default 
          name: kubernetes
